# training

./: .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  BASELINE_METRICS.md  CLAUDE.md  PHASE1_COMPLETE.md  PLAN_EVALUATION_CONSOLIDATION.md  PRD.md  QUICKSTART.md  README.md  TECHNICAL_SPEC.md  TEST_REPORT.md  TEST_RESULTS.md  main.py  package.json  pyproject.toml  requirements-production.txt  requirements.txt  run_phase_a_tests.sh  test_results.txt  test_results_after_fix.txt  vercel.json
.github/: SETUP.md
.github/workflows/: daily-sync.yml  test-deployment.yml
analyst/: __init__.py  chatgpt_evaluator.py  goal_analyzer.py  plan_manager.py  plan_parser.py  report_generator.py  visualizations.py  workout_scheduler.py
api/: README.md  __init__.py  app.py  dashboard.py  design_system.py  index.py  navigation.py  requirements.txt  schemas.py  timezone.py
api/cron/: __init__.py  sync.py
api/routes/: __init__.py  import_routes.py  metrics_routes.py  plan.py  reports.py  wellness_routes.py
database/: __init__.py  base.py  models.py
docs/: ARCHITECTURE.md  GARMIN_API.md  PHASE_A_DEPLOYMENT_SUMMARY.md  PHASE_A_FIX_PLAN.md  PHASE_A_NEXT_STEPS.md  PHASE_A_PROGRESS_UPDATE.md  PHASE_A_TEST_RESULTS.md  UPCOMING_PAGE_FIX_SUMMARY.md
docs/archive/: IMPLEMENTATION_PLAN.md  (+1 more)
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
integrations/: __init__.py
plans/: ChatGPT1-13-27BaseTrainingPlan.md  base_training_plan.md
scripts/: capture_snapshots.py  convert_swim_csvs.sh  csv_to_fit.sh  run_sync.py  setup_db.py  test_deployment.sh
(+85 files in other folders)
