[project]
name = "training"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "mangum",
    "python-multipart",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "python-dateutil",
    "pytz",
    "requests",
    "alembic>=1.12.0",
]

[tool.vercel]
runtime = "python"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "e2e: End-to-end tests against live deployment",
]
